Update footer text in index.html

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </section>
 
     <footer>
-        <p>Created with Gemini for Testing Scrollytelling</p>
+        <p>This is the final report of Yun-Chia Lai, student in NTU majoring in Atmospheric Sciences.</p>
     </footer>
 
     <script>
