Update character names and images in index.html

--- a/index.html
+++ b/index.html
@@ -165,18 +165,18 @@
             </div>
 
             <div class="char-card" onclick="location.href='liao_story.html';">
-                <img src="Liao_NF.png" alt="廖子齊">
+                <img src="Liao_NF.png" alt="林彥甫">
                 <div class="char-info">
-                    <span class="char-name">廖子齊</span>
+                    <span class="char-name">林彥甫</span>
                     <span class="char-role">新竹市議員</span>
                     <a href="liao_story.html" class="enter-btn">閱讀故事 ►</a>
                 </div>
             </div>
 
             <div class="char-card" onclick="location.href='lin_story.html';">
-                <img src="Lin_NF.png" alt="林佳瑋">
+                <img src="Lin_NF.png" alt="廖啟帆">
                 <div class="char-info">
-                    <span class="char-name">林佳瑋</span>
+                    <span class="char-name">廖啟帆</span>
                     <span class="char-role">決策委員</span>
                     <a href="lin_story.html" class="enter-btn">閱讀故事 ►</a>
                 </div>
