Update character roles and section titles in HTML

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 
     <section class="npp-netflix-section">
         <div class="npp-title-area">
-            <h2>人物誌：堅持的理由</h2>
-            <p>點擊下方卡片，看見他們入黨背後的故事</p>
+            <h2>加入時代力量的契機是什麼？</h2>
+            <p>請繼續觀賞，他們與時力的故事</p>
         </div>
 
         <div class="character-container">
@@ -159,7 +159,7 @@
                 <img src="Wang_NF.png" alt="王婉諭">
                 <div class="char-info">
                     <span class="char-name">王婉諭</span>
-                    <span class="char-role">時代力量黨主席</span>
+                    <span class="char-role">「如果有機會可以做更多，為什麼不試看看？」</span>
                     <a href="wang_story.html" class="enter-btn">閱讀故事 ►</a>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                 <img src="Liao_NF.png" alt="林彥甫">
                 <div class="char-info">
                     <span class="char-name">林彥甫</span>
-                    <span class="char-role">新竹市議員</span>
+                    <span class="char-role">那些被「二元對立」所遺忘的聲音</span>
                     <a href="liao_story.html" class="enter-btn">閱讀故事 ►</a>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                 <img src="Lin_NF.png" alt="廖啟帆">
                 <div class="char-info">
                     <span class="char-name">廖啟帆</span>
-                    <span class="char-role">決策委員</span>
+                    <span class="char-role">從偶像崇拜到瀕臨失望，他在「全場噓聲」中看見了真正的時代力量</span>
                     <a href="lin_story.html" class="enter-btn">閱讀故事 ►</a>
                 </div>
             </div>
