Swap images for character cards in index.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
 
             <div class="char-card" onclick="location.href='liao_story.html';">
-                <img src="Liao_NF.png" alt="林彥甫">
+                <img src="Lin_NF.png" alt="林彥甫">
                 <div class="char-info">
                     <span class="char-name">林彥甫</span>
                     <span class="char-role">那些被「二元對立」所遺忘的聲音</span>
@@ -174,7 +174,7 @@
             </div>
 
             <div class="char-card" onclick="location.href='lin_story.html';">
-                <img src="Lin_NF.png" alt="廖啟帆">
+                <img src="Liao_NF.png" alt="廖啟帆">
                 <div class="char-info">
                     <span class="char-name">廖啟帆</span>
                     <span class="char-role">從偶像崇拜到瀕臨失望，他在「全場噓聲」中看見了真正的時代力量</span>
